--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "currency_converter",
+  "name": "currency_converter_hamzagul",
   "version": "1.0.0",
   "description": "",
   "main": "currency_converter.js",
